--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^2.4.1",
     "mongodb": "^3.3.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
