--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.4.3",
     "@material-ui/pickers": "^3.2.6",
     "@types/date-fns": "^2.6.0",
+    "body-parser": "^1.19.0",
     "date-fns": "^2.4.1",
     "mongodb": "^3.3.2",
     "react": "^16.10.2",
